--- a/modules/mapvista_map_loader/package.xml
+++ b/modules/mapvista_map_loader/package.xml
@@ -13,7 +13,7 @@
   <depend>rclcpp_components</depend>
   <depend>pcl_conversions</depend>
   <depend>sensor_msgs</depend>
-  <depend>navista_map_msgs</depend>
+  <depend>mapvista_map_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
 
