--- a/messages/mapvista_map_msgs/CMakeLists.txt
+++ b/messages/mapvista_map_msgs/CMakeLists.txt
@@ -16,6 +16,7 @@ set(dependencies
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/LoadPcdMap.srv"
+  "srv/SaveMap.srv"
 )
 
 ament_export_dependencies(${dependencies})
