--- a/modules/map/mapvista_map_loader/CMakeLists.txt
+++ b/modules/map/mapvista_map_loader/CMakeLists.txt
@@ -62,6 +62,9 @@ install(TARGETS ${map_loader_library}
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
 )
+install(DIRECTORY include/
+  DESTINATION include/
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
