--- a/modules/map/mapvista_map_saver/CMakeLists.txt
+++ b/modules/map/mapvista_map_saver/CMakeLists.txt
@@ -70,6 +70,9 @@ install(TARGETS ${map_saver_library}
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
 )
+install(DIRECTORY include/
+  DESTINATION include/
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
