--- a/modules/map/mapvista_map_converter/CMakeLists.txt
+++ b/modules/map/mapvista_map_converter/CMakeLists.txt
@@ -66,6 +66,9 @@ install(TARGETS ${map_converter_library}
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
 )
+install(DIRECTORY include/
+  DESTINATION include/
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
